objects/LLC_BI__Excluded_Exposure__c.object
<CustomObject>
    <description>This object captures whether a loan or debt has been excluded from exposure calculations for a relationship or product package. It uses field history tracking to track a loan&apos;s history of being excluded and re-included into exposure calculations.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field auto-populates via the system. It specifies the relationship in which to exclude a loan or debt in the exposure calculation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Excluded Exposure</relationshipLabel>
        <relationshipName>Excluded_Exposures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean field</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This optional text field may be set to required via field set. Users populate this field to specify exclusions for a loan or debt; default is null.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field auto-populates via the system. It specifies which debt to exclude in the exposure calculation.</description>
        <label>Debt</label>
        <referenceTo>LLC_BI__Debt__c</referenceTo>
        <relationshipLabel>Excluded Exposure</relationshipLabel>
        <relationshipName>Excluded_Exposures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_Reason__c</fullName>
        <description>This optional field may be set to required via a field set. Users select this field to specify reportable exclusions for a loan or debt; default is null.</description>
        <label>Exclude Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Term-Out Refinance</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field auto-populates via the system. It specifies which loan to exclude in the exposure calculation.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Excluded Exposure</relationshipLabel>
        <relationshipName>Excluded_Exposures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field auto-populates via the system. It specifies the product package in which to exclude a loan or debt in the exposure calculation.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Excluded Exposure</relationshipLabel>
        <relationshipName>Excluded_Exposures</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Excluded Exposure</label>
    <nameField>
        <label>Excluded Exposure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excluded Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>